[package]
name = "blockchain_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.54", features = ["derive"] }
data-encoding = "2.9.0"
num-bigint = "0.4.6"
once_cell = "1.21.3"
ring = "0.17.14"
rust-crypto = "0.2.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sled = "0.34.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
